tools/tests/errors/enum_unknown_name.ki
var enum = import("enum")
var E = enum.Enum(["A", "B"])
discard E.get("C")
